Project manufacturing_erp_03_sales_planning {
  database_type: 'PostgreSQL'
  Note: 'Manufacturing ERP 03-sales-planning module. Source: live PostgreSQL schema after Flyway V65 (add entity name to audit logs). External tables are relationship-only stubs.'
}

Table sales_orders {
  sales_order_id uuid [pk, not null, default: `gen_random_uuid()`]
  company_id uuid [not null]
  plant_id uuid [not null]
  order_no varchar(100) [not null]
  customer_name varchar(255) [not null]
  order_date date [not null]
  status varchar(30) [not null, default: 'DRAFT']
  note text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  indexes {
    (company_id, order_no) [unique, name: 'uk_sales_orders_company_order_no']
  }

  checks {
    `status::text = ANY (ARRAY['DRAFT'::character varying, 'CONFIRMED'::character varying, 'IN_PRODUCTION'::character varying, 'PARTIALLY_FULFILLED'::character varying, 'FULFILLED'::character varying, 'CANCELLED'::character varying]::text[])` [name: 'chk_sales_orders_status']
  }
}

Table sales_order_lines {
  sales_order_line_id uuid [pk, not null, default: `gen_random_uuid()`]
  sales_order_id uuid [not null]
  item_id uuid [not null]
  line_no integer [not null]
  ordered_quantity numeric(19,6) [not null]
  fulfilled_quantity numeric(19,6) [not null, default: 0]
  due_date date [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  indexes {
    (sales_order_id, line_no) [unique, name: 'uk_sales_order_lines_order_line_no']
  }

  checks {
    `fulfilled_quantity >= 0::numeric AND fulfilled_quantity <= ordered_quantity` [name: 'chk_sales_order_lines_fulfilled']
    `line_no > 0` [name: 'chk_sales_order_lines_line_no']
    `ordered_quantity > 0::numeric` [name: 'chk_sales_order_lines_ordered']
  }
}

Table planning_demands {
  planning_demand_id uuid [pk, not null, default: `gen_random_uuid()`]
  company_id uuid [not null]
  plant_id uuid [not null]
  item_id uuid [not null]
  warehouse_id uuid
  demand_type varchar(30) [not null]
  required_quantity numeric(19,6) [not null]
  due_date date [not null]
  priority integer [not null, default: 100]
  status varchar(20) [not null, default: 'OPEN']
  reference_type varchar(80)
  reference_id varchar(120) [note: 'Polymorphic source identifier selected by reference_type; SALES_ORDER uses a Sales Order line identifier.']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  checks {
    `priority >= 0` [name: 'chk_planning_demands_priority']
    `required_quantity > 0::numeric` [name: 'chk_planning_demands_quantity']
    `status::text = ANY (ARRAY['OPEN'::character varying, 'CANCELLED'::character varying, 'CONSUMED'::character varying]::text[])` [name: 'chk_planning_demands_status']
    `demand_type::text = ANY (ARRAY['MANUAL'::character varying, 'FORECAST'::character varying, 'SALES_ORDER'::character varying]::text[])` [name: 'chk_planning_demands_type']
  }
}

Table mrp_runs {
  mrp_run_id uuid [pk, not null, default: `gen_random_uuid()`]
  company_id uuid [not null]
  plant_id uuid [not null]
  warehouse_id uuid
  horizon_start_date date [not null]
  horizon_end_date date [not null]
  status varchar(20) [not null, default: 'PENDING']
  started_at timestamptz
  completed_at timestamptz
  total_demand_lines integer [not null, default: 0]
  total_requirement_lines integer [not null, default: 0]
  total_suggestion_lines integer [not null, default: 0]
  error_message text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]
  code varchar(40) [not null]
  shortage_lines integer [not null, default: 0]
  planned_work_orders integer [not null, default: 0]
  planned_purchase_recommendations integer [not null, default: 0]
  blocked_proposals integer [not null, default: 0]
  gross_demand_quantity numeric(19,6) [not null, default: 0]
  idempotency_key varchar(120) [unique]
  payload_hash varchar(64)

  checks {
    `horizon_start_date <= horizon_end_date` [name: 'chk_mrp_runs_horizon']
    `status::text = ANY (ARRAY['PENDING'::character varying, 'RUNNING'::character varying, 'COMPLETED'::character varying, 'FAILED'::character varying, 'CANCELLED'::character varying]::text[])` [name: 'chk_mrp_runs_status']
    `total_demand_lines >= 0 AND total_requirement_lines >= 0 AND total_suggestion_lines >= 0 AND shortage_lines >= 0 AND planned_work_orders >= 0 AND planned_purchase_recommendations >= 0 AND blocked_proposals >= 0 AND gross_demand_quantity >= 0::numeric` [name: 'chk_mrp_runs_totals']
  }
}

Table mrp_run_demands {
  mrp_run_demand_id uuid [pk, not null, default: `gen_random_uuid()`]
  mrp_run_id uuid [not null]
  planning_demand_id uuid [not null]
  item_id uuid [not null]
  warehouse_id uuid
  required_quantity numeric(19,6) [not null]
  due_date date [not null]
  priority integer [not null]
  status varchar(20) [not null, default: 'SNAPSHOT']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]

  indexes {
    (mrp_run_id, planning_demand_id) [unique, name: 'uk_mrp_run_demands_run_demand']
  }

  checks {
    `required_quantity > 0::numeric` [name: 'chk_mrp_run_demands_quantity']
    `status::text = 'SNAPSHOT'::text` [name: 'chk_mrp_run_demands_status']
  }
}

Table mrp_requirement_lines {
  mrp_requirement_line_id uuid [pk, not null, default: `gen_random_uuid()`]
  mrp_run_id uuid [not null]
  parent_requirement_line_id uuid
  source_demand_id uuid
  item_id uuid [not null]
  warehouse_id uuid
  requirement_level integer [not null]
  gross_required_quantity numeric(19,6) [not null, default: 0]
  available_quantity numeric(19,6) [not null, default: 0]
  reserved_quantity numeric(19,6) [not null, default: 0]
  open_supply_quantity numeric(19,6) [not null, default: 0]
  safety_stock_quantity numeric(19,6) [not null, default: 0]
  net_required_quantity numeric(19,6) [not null, default: 0]
  due_date date [not null]
  requirement_status varchar(20) [not null]
  note text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]
  setting_source varchar(30) [not null, default: 'SYSTEM_DEFAULT']
  excluded_lot_count integer [not null, default: 0]
  projected_available_quantity numeric(19,6)

  checks {
    `excluded_lot_count >= 0` [name: 'chk_mrp_req_excluded_lot_count']
    `requirement_level >= 0` [name: 'chk_mrp_req_level']
    `projected_available_quantity IS NULL OR projected_available_quantity >= 0::numeric` [name: 'chk_mrp_req_projected_available']
    `gross_required_quantity >= 0::numeric AND available_quantity >= 0::numeric AND reserved_quantity >= 0::numeric AND open_supply_quantity >= 0::numeric AND safety_stock_quantity >= 0::numeric AND net_required_quantity >= 0::numeric` [name: 'chk_mrp_req_quantities']
    `setting_source::text = ANY (ARRAY['ITEM_WAREHOUSE'::character varying, 'SYSTEM_DEFAULT'::character varying]::text[])` [name: 'chk_mrp_req_setting_source']
    `requirement_status::text = ANY (ARRAY['COVERED'::character varying, 'SHORTAGE'::character varying, 'BOM_MISSING'::character varying, 'INVALID'::character varying]::text[])` [name: 'chk_mrp_req_status']
  }
}

Table supply_suggestions {
  supply_suggestion_id uuid [pk, not null, default: `gen_random_uuid()`]
  mrp_run_id uuid [not null]
  requirement_line_id uuid [not null]
  company_id uuid [not null]
  plant_id uuid [not null]
  warehouse_id uuid
  item_id uuid [not null]
  suggestion_type varchar(40) [not null]
  suggested_quantity numeric(19,6) [not null]
  needed_by_date date [not null]
  suggested_order_date date [not null]
  status varchar(20) [not null, default: 'DRAFT']
  decision_note text
  converted_reference_type varchar(80)
  converted_reference_id uuid [note: 'Polymorphic identifier of the generated Work Order or Purchase Requisition.']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  created_by uuid
  updated_by uuid
  version bigint [default: 0]
  exception_state varchar(20) [not null, default: 'READY']
  message_codes varchar(200)
  source_routing_code varchar(100)
  source_routing_version varchar(40)

  checks {
    `exception_state::text = ANY (ARRAY['READY'::character varying, 'WARNING'::character varying, 'BLOCKED'::character varying]::text[])` [name: 'chk_supply_suggestions_exception_state']
    `suggested_quantity > 0::numeric` [name: 'chk_supply_suggestions_quantity']
    `status::text = ANY (ARRAY['DRAFT'::character varying, 'APPROVED'::character varying, 'REJECTED'::character varying, 'CONVERTED'::character varying]::text[])` [name: 'chk_supply_suggestions_status']
    `suggestion_type::text = ANY (ARRAY['WORK_ORDER'::character varying, 'PURCHASE_REQUISITION'::character varying]::text[])` [name: 'chk_supply_suggestions_type']
  }
}

Table companies [note: 'External reference table. Only relationship columns are shown; see its owning module for the full definition.'] {
  company_id uuid [pk, not null, default: `gen_random_uuid()`]
}

Table items [note: 'External reference table. Only relationship columns are shown; see its owning module for the full definition.'] {
  item_id uuid [pk, not null, default: `gen_random_uuid()`]
}

Table plants [note: 'External reference table. Only relationship columns are shown; see its owning module for the full definition.'] {
  plant_id uuid [pk, not null, default: `gen_random_uuid()`]
}

Table warehouses [note: 'External reference table. Only relationship columns are shown; see its owning module for the full definition.'] {
  warehouse_id uuid [pk, not null, default: `gen_random_uuid()`]
}

Ref mrp_requirement_lines_item_id_fkey: mrp_requirement_lines.item_id > items.item_id
Ref mrp_requirement_lines_mrp_run_id_fkey: mrp_requirement_lines.mrp_run_id > mrp_runs.mrp_run_id
Ref mrp_requirement_lines_parent_requirement_line_id_fkey: mrp_requirement_lines.parent_requirement_line_id > mrp_requirement_lines.mrp_requirement_line_id
Ref mrp_requirement_lines_source_demand_id_fkey: mrp_requirement_lines.source_demand_id > planning_demands.planning_demand_id
Ref mrp_requirement_lines_warehouse_id_fkey: mrp_requirement_lines.warehouse_id > warehouses.warehouse_id
Ref mrp_run_demands_item_id_fkey: mrp_run_demands.item_id > items.item_id
Ref mrp_run_demands_mrp_run_id_fkey: mrp_run_demands.mrp_run_id > mrp_runs.mrp_run_id
Ref mrp_run_demands_planning_demand_id_fkey: mrp_run_demands.planning_demand_id > planning_demands.planning_demand_id
Ref mrp_run_demands_warehouse_id_fkey: mrp_run_demands.warehouse_id > warehouses.warehouse_id
Ref mrp_runs_company_id_fkey: mrp_runs.company_id > companies.company_id
Ref mrp_runs_plant_id_fkey: mrp_runs.plant_id > plants.plant_id
Ref mrp_runs_warehouse_id_fkey: mrp_runs.warehouse_id > warehouses.warehouse_id
Ref planning_demands_company_id_fkey: planning_demands.company_id > companies.company_id
Ref planning_demands_item_id_fkey: planning_demands.item_id > items.item_id
Ref planning_demands_plant_id_fkey: planning_demands.plant_id > plants.plant_id
Ref planning_demands_warehouse_id_fkey: planning_demands.warehouse_id > warehouses.warehouse_id
Ref sales_order_lines_item_id_fkey: sales_order_lines.item_id > items.item_id
Ref sales_order_lines_sales_order_id_fkey: sales_order_lines.sales_order_id > sales_orders.sales_order_id
Ref sales_orders_company_id_fkey: sales_orders.company_id > companies.company_id
Ref sales_orders_plant_id_fkey: sales_orders.plant_id > plants.plant_id
Ref supply_suggestions_company_id_fkey: supply_suggestions.company_id > companies.company_id
Ref supply_suggestions_item_id_fkey: supply_suggestions.item_id > items.item_id
Ref supply_suggestions_mrp_run_id_fkey: supply_suggestions.mrp_run_id > mrp_runs.mrp_run_id
Ref supply_suggestions_plant_id_fkey: supply_suggestions.plant_id > plants.plant_id
Ref supply_suggestions_requirement_line_id_fkey: supply_suggestions.requirement_line_id > mrp_requirement_lines.mrp_requirement_line_id
Ref supply_suggestions_warehouse_id_fkey: supply_suggestions.warehouse_id > warehouses.warehouse_id

TableGroup module_03_sales_planning {
  sales_orders
  sales_order_lines
  planning_demands
  mrp_runs
  mrp_run_demands
  mrp_requirement_lines
  supply_suggestions
}

